<resources>
    <string name="app_name">Brainfarm</string>

    <string name="service_endpoint_url">http://10.0.2.2:59006/BrainfarmService.svc/ajax/</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="ribbon_project">PROJECT</string>
    <string name="ribbon_synth">SYNTHESIS</string>
    <string name="ribbon_spec">SPECIFICATION</string>
    <string name="ribbon_contrib">CONTRIBUTION</string>

    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_account">Manage Account</string>
    <string name="menu_create_project">Create Project</string>

    <string name="menu_comment_reply">Reply</string>
    <string name="menu_comment_bookmark">Bookmark</string>
    <string name="menu_comment_unbookmark">Unbookmark</string>
    <string name="menu_comment_like">Like</string>
    <string name="menu_comment_unlike">Unlike</string>

    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create_project">Create Project</string>
    <string name="button_search_projects">Search Projects</string>
    <string name="button_search">Search</string>
    <string name="button_wait">Loading. Please wait…</string>

    <string name="button_search_title">Project title</string>
    <string name="button_search_tags">Project tags</string>

    <string name="warn_password_match">Password fields must match</string>

</resources>
