<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5px"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/lblUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10px"
                android:layout_weight="0"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                tools:text="Username" />

            <TextView
                android:id="@+id/lblCreateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorWhite"
                tools:text="at 1970-01-01 12:00 AM"/>

            <TextView
                android:id="@+id/lblCommentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textColor="@color/colorWhite"
                tools:text="#1" />

        </LinearLayout>

        <TextView
            android:id="@+id/lblRibbonProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/ribbonProject"
            android:padding="5px"
            android:text="@string/ribbon_project"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblRibbonSynth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/ribbonSynth"
            android:padding="5px"
            android:text="@string/ribbon_synth"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblRibbonSpec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/ribbonSpec"
            android:padding="5px"
            android:text="@string/ribbon_spec"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblRibbonContrib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/ribbonContrib"
            android:padding="5px"
            android:text="@string/ribbon_contrib"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/commentContentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCommentBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingBottom="15px"
                android:paddingLeft="5px"
                android:paddingRight="5px"
                android:paddingTop="15px"
                tools:text="Lorem ipsum dolar sit amet..." />

            <Button
                android:id="@+id/btnCommentOptions"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_more_vert_white_24dp"
                android:backgroundTint="@color/colorGreyTransparent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/childCommentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5px"></LinearLayout>

    </LinearLayout>

</RelativeLayout>